# Bakalarka

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  comments.md
discarded/: discarded.c
examples/frdm_kl27z_demo/: CMakeLists.txt  main.c  setup.md
examples/posix_demo/: CMakeLists.txt  Makefile  cmake_install.cmake  l2_tests.c  l2_tests.h  l3_tests.c  l3_tests.h  main.c  mcu.h  tests.c  tests_helper.c  tests_helper.h  use_cases.c  use_cases.h
examples/rpi_demo/: CMakeLists.txt  main.c  setup.md
include/: cl_layer1.h  cl_layer1_priv.h  cl_layer2.h  cl_layer2_priv.h  cl_layer3.h  cl_layer3_priv.h  config.h  types.h
include/main/: cl_layer1_priv.h  cl_layer2.h  cl_layer2_priv.h  cl_layer3.h  cl_layer3_priv.h  context_manager.h  l1.h  l2.h  l3.h  types.h
platform/frdm_kl27z/: context_lib_port.c  context_lib_port.h
platform/kinetis/: context_lib_port.c  context_lib_port.h
platform/posix/: context_lib_port.c  context_lib_port.h
platform/rpi_pico/: context_lib_port.c  context_lib_port.h
platform/template/: context_lib_port.c  context_lib_port.h
src/: cl_layer1.c  cl_layer2.c  cl_layer3.c  context_manager.c  library_doc.md
src/main/: cl_layer1.c  cl_layer2.c  cl_layer3.c  context_manager.c  discarded.c  helper_functions.c  l1_private.c  l1_public.c  l2_private.c  l2_public.c  l3.c  library_doc.md
ulog/: CMakeLists.txt  logging_functions.c  ulog.c  ulog.h
